--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Portfolio Backend Developer</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="css/styles.css">
   <script>
     tailwind.config = {
       darkMode: 'class',
@@ -582,38 +583,7 @@
     </div>
   </footer>
 
-  <!-- JavaScript for tabs -->
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      const tabBackend = document.getElementById('tab-backend');
-      const tabFrontend = document.getElementById('tab-frontend');
-      const contentBackend = document.getElementById('content-backend');
-      const contentFrontend = document.getElementById('content-frontend');
-
-      tabBackend.addEventListener('click', function() {
-        // Activate backend tab
-        tabBackend.classList.add('bg-emerald-500');
-        tabBackend.classList.remove('bg-zinc-800');
-        tabFrontend.classList.add('bg-zinc-800');
-        tabFrontend.classList.remove('bg-blue-500');
-        
-        // Show backend content, hide frontend content
-        contentBackend.classList.remove('hidden');
-        contentFrontend.classList.add('hidden');
-      });
-
-      tabFrontend.addEventListener('click', function() {
-        // Activate frontend tab
-        tabFrontend.classList.add('bg-blue-500');
-        tabFrontend.classList.remove('bg-zinc-800');
-        tabBackend.classList.add('bg-zinc-800');
-        tabBackend.classList.remove('bg-emerald-500');
-        
-        // Show frontend content, hide backend content
-        contentFrontend.classList.remove('hidden');
-        contentBackend.classList.add('hidden');
-      });
-    });
-  </script>
+  <!-- JavaScript -->
+  <script src="js/tabs.js"></script>
 </body>
 </html>
